--- a/templates/laptop.html
+++ b/templates/laptop.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  {% if request.user.is_authenticated %}
+
       <title>Ноутбуки</title>
         
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -13,32 +13,17 @@
                       <div class="card">
                           <img src="{{ laptop.image.url }}" width="200", height="200" >
                           <div class="card-body">
-                              <h5 class="card-title">{{ laptop.company }}</h5>
-                              <p class="card-text"><strong>Модель:</strong> {{ laptop.model }}</p>
-                              <p class="card-text"><strong>Цена:</strong> {{ laptop.price }} $</p>
+
+                              <h5 class="card-title"><a href="{% url 'laptop_detail' laptop.id %}">{{ laptop.company }}</a></h5>
+                              
+                            
                           </div>
                       </div>
                   </div>
               {% endfor %}
           </div>
       </div>
-    {% else %}
-      <title>Регистрация</title>
-            
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  
-      <div class="container mt-5">
 
-        <div class="alert alert-success" role="alert">
+    <a href="{% url 'laptop-create' %}"><button>добавить Ноутбук</button></a>
 
-
-          <p>Чтобы увидеть ноутбуки, телевизоры или акксесуары проходите регистрация</p>
-    
-
-        </div>
-
-      </div>
-    
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  {% endif %}
 {% endblock %}
