--- a/templates/accessories.html
+++ b/templates/accessories.html
@@ -1,7 +1,6 @@
+<!-- accessories.html -->
 {% extends "base.html" %}
 {% block content %}
-  {% if request.user.is_authenticated %}
-
         <title>Акксесуары</title>
           
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -10,16 +9,16 @@
         <div class="container mt-5">
             <div class="row">
                 {% for accessories in accessories_obj %}
+                  
                     <div class="col-md-4 mb-4">
                         <div class="card">
                             <img src="{{ accessories.image.url }}" width="200", height="200" >
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Имя : </strong>{{ accessories.name }}</h5>
-                          
-                                <p class="card-text"><strong>Цена:</strong> {{ accessories.price }} $</p>
+                                <h5 class="card-title"><a href="{% url 'accessories_detail' accessories.id %}">{{accessories.name}}</a></h5>
                             </div>
                         </div>
                     </div>
+                  
                 {% endfor %}
             </div>
         </div>
@@ -27,23 +26,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  {% else %}
-      <title>Регистрация</title>
-              
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-      <div class="container mt-5">
+        <a href="{% url 'accessories-create' %}"><button>добавить Акксесуар</button></a>
 
-        <div class="alert alert-success" role="alert">
-
-
-          <p>Чтобы увидеть ноутбуки, телевизоры или акксесуары проходите регистрация</p>
-
-
-        </div>
-
-      </div>
-
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  {% endif %}
 {% endblock %}
