--- a/templates/laptop.html
+++ b/templates/laptop.html
@@ -14,7 +14,7 @@
                           <img src="{{ laptop.image.url }}" width="200", height="200" >
                           <div class="card-body">
 
-                              <h5 class="card-title"><a href="{% url 'laptop_detail' laptop.id %}">{{ laptop.company }}</a></h5>
+                              <h5 class="card-title"><a href="{% url 'laptop_detail' laptop.id %}"><button>{{ laptop.company }}</button></a></h5>
                               
                             
                           </div>
