--- a/templates/phone.html
+++ b/templates/phone.html
@@ -14,13 +14,11 @@
             {% for phone in phone_obj %}
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        {% if phone.image %}
+                        
                             <img src="{{ phone.image.url }}" width="200" height="200">
-                        {% else %}
-                            <img src="https://via.placeholder.com/200x200" alt="No Image" width="200" height="200">
-                        {% endif %}
+                        
                         <div class="card-body">
-                            <p class="card-text"><a href="{% url 'phone_detail' phone.id %}">{{ phone.company }}</a></p>
+                            <a href="{% url 'phone_detail' phone.id %}"><button>{{ phone.company }}</button></a>
                         </div>
                     </div>
                 </div>
